@@ -36,6 +36,7 @@ dependencies {
     compileOnly(libs.nohorny)
     compileOnly(libs.flex)
     implementation(libs.jsoup)
+    implementation(libs.ahocorasick)
 }
 
 val generateResources by tasks.registering {
@@ -139,23 +140,18 @@ tasks.register<MindustryExec>("runMindustryDesktop2") {
     configureDesktop()
 }
 
-tasks.withType<MindustryExec> {
-    jvmArguments.add("--enable-preview")
-}
-
 val pluginLibs = fileTree("libs") { include("*.jar") }
 
 tasks.runMindustryServer {
     mods.from(
-        tasks.shadowJar,
         downloadKotlinRuntime,
         downloadNoHorny,
         downloadSlf4md,
         downloadFlex,
         pluginLibs,
         downloadSql4md,
-        // downloadDistributorCommon,
-        // downloadDistributorPermissionRank,
+        downloadDistributorCommon,
+        downloadDistributorPermissionRank,
     )
 }
 
@@ -171,7 +167,7 @@ tasks.register<MindustryExec>("runMindustryServer2") {
         downloadFlex,
         pluginLibs,
         downloadSql4md,
-        // downloadDistributorCommon,
-        // downloadDistributorPermissionRank,
+        downloadDistributorCommon,
+        downloadDistributorPermissionRank,
     )
 }
